--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "truffle-contract-size": "^2.0.1",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "^0.5.4",
+    "truffle-flattener": "^1.5.0",
     "web3": "^1.3.5"
   }
 }
